--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 line-bot-sdk 
 beautifulSoup4==4.9.1
 flask 
-#pymongo 
+pymongo 
 datetime 
 pandas==1.3.1
-# SnowNLP 
-# emoji 
-#pyshorteners
-#scipy
+SnowNLP 
+emoji 
+pyshorteners
+scipy
+numpy
 requests==2.22.0
 gspread==4.0.1
 oauth2client==4.1.3
