--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-line-bot-sdk 
+line-bot-sdk==1.19.0
 beautifulSoup4==4.9.1
-flask 
+flask==1.1.2
 pymongo 
 datetime 
 pandas==1.3.1
 SnowNLP 
 emoji 
 pyshorteners
-scipy
-numpy
+scipy==1.5.0
+numpy==1.19.5
 requests==2.22.0
 gspread==4.0.1
 oauth2client==4.1.3
