--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ beautifulSoup4==4.9.1
 flask==1.1.2
 pymongo 
 datetime 
-pandas==1.3.1
+# pandas==1.3.1
 SnowNLP 
 emoji 
 pyshorteners
@@ -13,3 +13,4 @@ requests==2.22.0
 gspread==4.0.1
 oauth2client==4.1.3
 range
+scikit-learn==0.24.2
