--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,6 @@ matplotlib==2.2.2
 nbconvert==5.4.0
 nbformat==4.4.0
 nose==1.3.7
-Numpy==1.15.4
 packaging==18.0
 pandas==0.23.4
 pandocfilters==1.4.2
@@ -55,5 +54,6 @@ line-bot-sdk==1.19.0
 flask==1.1.2
 range
 datetime 
+numpy==1.15.4
 gspread==4.0.1
 oauth2client==4.1.3
