--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-jupyter
 flask==1.1.2
 numpy==1.19.5
 beautifulsoup4==4.6.3
 requests==2.20.1
-scipy
+scipy==1.5.0
 pandas==1.3.1
 line-bot-sdk==1.19.0
-
 datetime 
 gspread==4.0.1
 oauth2client==4.1.3
