--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ gspread==4.0.1
 oauth2client==4.1.3
 pyimgur
 mpl_finance
+heroku create --buildpack https://github.com/aneesh-neelam/heroku-buildpack-python-talib.git
 twstock
