--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+TA-lib
 flask==1.1.2
 numpy==1.19.5
 beautifulsoup4==4.6.3
@@ -12,5 +13,4 @@ gspread==4.0.1
 oauth2client==4.1.3
 pyimgur
 mpl_finance
-heroku create --buildpack https://github.com/aneesh-neelam/heroku-buildpack-python-talib.git
 twstock
