--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-TA-lib
 flask==1.1.2
 numpy==1.19.5
 beautifulsoup4==4.6.3
@@ -12,5 +11,7 @@ matplotlib
 gspread==4.0.1
 oauth2client==4.1.3
 pyimgur
+pycrypto
+Ta-lib
 mpl_finance
 twstock
