--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ matplotlib
 gspread==4.0.1
 oauth2client==4.1.3
 pyimgur
+sudo apt-get install python3-dev
 Ta-lib
--e git + https://github.com/numrut/heroku-buildpack-python-talib
 mpl_finance
 twstock
